
** Added

- *Instance update API*: New public functions for re-rendering mounted instances:
  - =vui-rerender= - Re-render an instance preserving component state and memos. Useful for forcing a redraw.
  - =vui-update= - Update instance props, invalidate all memos, and re-render. Useful when new data arrives and computed values need to refresh while preserving UI state (like collapsed sections).
- *vui-typed-field component*: New component in =vui-components.el= for typed input with parsing and validation. Uses component state to preserve raw input (e.g., users can see "123f" they typed while error is displayed).
  - Supported types: =integer=, =natnum=, =float=, =number=, =file=, =directory=, =symbol=, =sexp=
  - Path types (=file=, =directory=) automatically expand =~= and relative paths via =expand-file-name=
  - =:must-exist= constraint for =file= and =directory= types (validates path existence)
  - =:extensions= constraint for =file= type (e.g., =:extensions '("el" "org")=)
  - =:on-change= and =:on-submit= receive typed values only when input is valid
  - =:on-error= callback receives =(error-msg raw-input)= on invalid input
  - Numeric constraints via =:min= and =:max=
  - Custom validation via =:validate= (receives typed value)
  - Error display via =:show-error= (=t= or ='below= for below field, ='inline= for same line)
  - =:required= constraint for non-empty validation
- *Typed field shortcuts* in =vui-components.el= (wrappers around =vui-typed-field=):
  - =vui-integer-field=, =vui-natnum-field=, =vui-float-field=, =vui-number-field= for numeric input
  - =vui-file-field=, =vui-directory-field= for path input
  - =vui-symbol-field=, =vui-sexp-field= for Lisp input

** Changed

- *vui-components.el*: New component library with higher-level components built on vui primitives.